--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
         <script src="index.js"></script>
+        <script src="login.js"></script>
     </head>
     <body>
         <h1>메인 페이지</h1>
